--- a/_config.yml
+++ b/_config.yml
@@ -21,22 +21,22 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: resoundlabs/music 
+  github: resoundlabs/music
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: 
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 # Put this in body of post to split into exerpt and "the rest"
-excerpt_separator: <!--more-->  
+excerpt_separator: <!--more-->
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:
+disqus: resoundlabs
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
