--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,7 @@ baseurl: ""
 #
 
 markdown: redcarpet
+  extensions: ["no_intra_emphasis", "autolink", "tables", "with_toc_data", "space_after_headers", "superscript"]
 highlighter: pygments
 permalink: /:title/
 
