updated _config with redcarpet extensions - specifically for tables

--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ baseurl: ""
 #
 
 markdown: redcarpet
-  extensions: ["no_intra_emphasis", "autolink", "tables", "with_toc_data", "space_after_headers", "superscript"]
+  extensions: [autolink]
 highlighter: pygments
 permalink: /:title/
 
