updated _config with redcarpet extensions - specifically for tables

--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ baseurl: ""
 #
 
 markdown: redcarpet
-  extensions: [autolink]
+  extensions: ["autolink"]
 highlighter: pygments
 permalink: /:title/
 
