--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ highlighter: pygments
 permalink: /:title/
 
 redcarpet:
-  extensions: ["autolink"]
+  extensions: ["autolink", "no_intra_emphasis", "autolink", "tables", "with_toc_data", "space_after_headers", "superscript"]
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
