--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,7 @@ markdown: redcarpet
 highlighter: pygments
 permalink: /:title/
 
+#  add in all the special extensions for redcarpet - tables is key one
 redcarpet:
   extensions: ["autolink", "no_intra_emphasis", "autolink", "tables", "with_toc_data", "space_after_headers", "superscript"]
 
