troubleshooting code highlighting

--- a/_config.yml
+++ b/_config.yml
@@ -66,8 +66,8 @@ highlighter: pygments
 permalink: /:title/
 
 #  Add in all the special extensions for redcarpet - tables is key one
-redcarpet:
-  extensions: ["autolink", "no_intra_emphasis", "autolink", "tables", "with_toc_data", "space_after_headers", "superscript"]
+# redcarpet:
+#   extensions: ["autolink", "no_intra_emphasis", "autolink", "tables", "with_toc_data", "space_after_headers", "superscript"]
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
